--- a/css/styles.css
+++ b/css/styles.css
@@ -269,6 +269,12 @@ color: #757575;
  
 }
 
+.section-icon {
+    background-color: #F5F4FA;
+    padding: 25px 102px 25px 102px;
+    margin-bottom: 30px;
+}
+
 /* Блок з Фото */
 .foto {
     padding-bottom: 94px;
@@ -299,8 +305,14 @@ background: #F5F4FA;
 .team-items {
     display: flex;
     gap:30px;
+    
 }
 
+.team-members {
+    background-color: #FFFFFF;
+    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+    border-radius: 0px 0px 4px 4px;
+}
 .team-tittle {
     margin-top: 0px;
     margin-bottom: 50px;
@@ -340,8 +352,40 @@ text-align: center;
         line-height: 1.2;
         letter-spacing: 0.03em;
         color: #757575;
-        
     }
+
+    .socials-list {
+        display: flex;
+        align-items: center;
+        margin: 16px 32px 30px 32px;
+        gap: 10px;
+
+    }
+
+.socials-item {
+    width: 44px;
+    height: 44px;
+    
+}
+
+.socials-links {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    height: 100%;
+    background-color: #FFF;
+    border-radius: 50%;
+    color: var(--accent-color);
+}
+.social-icon {
+    fill: #AFB1B8;
+}
+
+.social-icon:hover {
+    
+    fill: var(--accent-color);
+}
 
 /* Футер */
 .footer {
