hw4_footer_problem

--- a/css/styles.css
+++ b/css/styles.css
@@ -451,10 +451,14 @@ text-align: center;
   
 }
 
-.footer-item {
+.footer-container {
     display: flex;
-    gap: 70px;
 }
+
+.footer-item {
+    
+}
+
 
 
 .adress {
